# obsidian_github_sync

./: .gitignore  Cargo.toml
src/: get_config.rs  get_time.rs  git_operation.rs  main.rs  path_fn.rs  temp_dir.rs
src/git_operation/: get_time.rs
