[package]
name = "obsidian-github-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
eyre = "0.6.11"
serde_json = "1.0.111"

[dev-dependencies]
dotenvy = "0.15.7"
tempdir = "0.3.7"
